# autogen-101

./: .env.example  README.md  autogen_101.ipynb  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json
Examples/: data_analyst_agent.py  tutorial_lab_agent.py
Examples/architecture_design_agent/: README.md  ai_agents.py  app.py
Examples/architecture_design_agent/templates/: index.html
Practices/01-AI_Product_Brainstorm/: README.md  code_template.py
Practices/02-Risk_Intelligence_Unit/: README.md  code_template.py
Practices/03-Legal_Contract_Analysis/: README.md  code_template.py
